<resources>
    <string name="app_name">GeekBrains1</string>
    <string name="head_text">Умножение/деление двух чисел</string>
    <string name="first_name">Первое число</string>
    <string name="second_name">Второе число</string>
    <string name="result">Результат</string>
    <string name="switch_text">Туда/сюда</string>
    <string name="chBox_text">Запись в файл</string>
    <string name="button_text">Пуск</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
    <string name="plus_minus">+/-</string>
    <string name="ce">CE</string>
    <string name="percent">%</string>


</resources>