<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_cosm">


    <TextView
        android:id="@+id/calc_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5sp"
        android:layout_weight="1"
        android:background="@drawable/background_cosm"
        android:gravity="right|center"
        android:paddingHorizontal="20sp"
        android:text="@string/num_0"
        android:textColor="@color/result_text"
        android:textSize="40pt" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/num_7"
                android:layout_width="@dimen/calc_vertical_button_width"
                android:layout_height="@dimen/calc_vertical_button_height"
                android:layout_marginStart="3sp"
                android:layout_marginEnd="4sp"
                android:backgroundTint="@color/green"
                android:gravity="center"
                android:onClick="clickNumber"
                android:text="@string/num_7"
                android:textColor="@color/red"
                android:textSize="24sp" />

            <Button
                android:id="@+id/num_8"
                android:layout_width="@dimen/calc_vertical_button_width"
                android:layout_height="@dimen/calc_vertical_button_height"
                android:layout_marginEnd="4sp"
                android:backgroundTint="@color/green"
                android:gravity="center"
                android:onClick="clickNumber"
                android:text="@string/num_8"
                android:textColor="@color/red"
                android:textSize="24sp" />

            <Button
                android:id="@+id/num_9"
                android:layout_width="@dimen/calc_vertical_button_width"
                android:layout_height="@dimen/calc_vertical_button_height"
                android:layout_marginEnd="4sp"
                android:backgroundTint="@color/green"
                android:gravity="center"
                android:onClick="clickNumber"
                android:text="@string/num_9"
                android:textColor="@color/red"
                android:textSize="24sp" />

            <Button
                android:id="@+id/divide"
                android:layout_width="@dimen/calc_vertical_button_width"
                android:layout_height="@dimen/calc_vertical_button_height"
                android:layout_marginStart="3sp"
                android:backgroundTint="@color/green"
                android:gravity="center"
                android:onClick="operate"
                android:text="@string/divide"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/num_4"
                android:onClick="clickNumber"
                android:layout_width="@dimen/calc_vertical_button_width"
                android:layout_height="@dimen/calc_vertical_button_height"
                android:gravity="center"
                android:backgroundTint="@color/green"
                android:textColor="@color/red"
                android:layout_marginStart="3sp"
                android:layout_marginEnd="4sp"
                android:textSize="24sp"
                android:text="@string/num_4" />

            <Button
                android:id="@+id/num_5"
                android:onClick="clickNumber"
                android:layout_width="@dimen/calc_vertical_button_width"
                android:layout_height="@dimen/calc_vertical_button_height"
                android:gravity="center"
                android:backgroundTint="@color/green"
                android:textColor="@color/red"
                android:layout_marginEnd="4sp"
                android:textSize="24sp"
                android:text="@string/num_5" />

            <Button
                android:id="@+id/num_6"
                android:onClick="clickNumber"
                android:layout_width="@dimen/calc_vertical_button_width"
                android:layout_height="@dimen/calc_vertical_button_height"
                android:gravity="center"
                android:backgroundTint="@color/green"
                android:textColor="@color/red"
                android:layout_marginEnd="4sp"
                android:textSize="24sp"
                android:text="@string/num_6" />

            <Button
                android:id="@+id/multiply"
                android:onClick="operate"
                android:layout_width="@dimen/calc_vertical_button_width"
                android:layout_height="@dimen/calc_vertical_button_height"
                android:gravity="center"
                android:backgroundTint="@color/green"
                android:textColor="@color/black"
                android:layout_marginStart="3sp"
                android:textSize="24sp"
                android:text="@string/multiply" />
        </TableRow>




        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
            android:id="@+id/num_1"
            android:onClick="clickNumber"
            android:layout_width="@dimen/calc_vertical_button_width"
            android:layout_height="@dimen/calc_vertical_button_height"
            android:gravity="center"
            android:layout_marginStart="3sp"
            android:layout_marginEnd="4sp"
            android:backgroundTint="@color/green"
            android:textColor="@color/red"

            android:textSize="24sp"
            android:text="@string/num_1" />

        <Button
            android:id="@+id/num_2"
            android:onClick="clickNumber"
            android:layout_width="@dimen/calc_vertical_button_width"
            android:layout_height="@dimen/calc_vertical_button_height"
            android:gravity="center"
            android:backgroundTint="@color/green"
            android:textColor="@color/red"
            android:layout_marginEnd="4sp"
            android:textSize="24sp"
            android:text="@string/num_2" />

        <Button
            android:id="@+id/num_3"
            android:onClick="clickNumber"
            android:layout_width="@dimen/calc_vertical_button_width"
            android:layout_height="@dimen/calc_vertical_button_height"
            android:gravity="center"
            android:layout_marginEnd="4sp"
            android:backgroundTint="@color/green"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:text="@string/num_3" />

        <Button
            android:id="@+id/minus"
            android:onClick="operate"
            android:layout_width="@dimen/calc_vertical_button_width"
            android:layout_height="@dimen/calc_vertical_button_height"
            android:gravity="center"
            android:layout_marginStart="3sp"
            android:backgroundTint="@color/green"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/minus" />

        </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/plus_minus"
            android:onClick="clickNumber"
            android:layout_width="@dimen/calc_vertical_button_width"
            android:layout_height="@dimen/calc_vertical_button_height"
            android:gravity="center"
            android:layout_marginStart="3sp"
            android:layout_marginEnd="4sp"
            android:backgroundTint="@color/green"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:text="@string/plus_minus" />

        <Button
            android:id="@+id/num_0"
            android:onClick="clickNumber"
            android:layout_width="@dimen/calc_vertical_button_width"
            android:layout_height="@dimen/calc_vertical_button_height"
            android:gravity="center"
            android:layout_marginEnd="4sp"
            android:backgroundTint="@color/green"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:text="@string/num_0" />

        <Button
            android:id="@+id/dot"
            android:onClick="clickNumber"
            android:layout_width="@dimen/calc_vertical_button_width"
            android:layout_height="@dimen/calc_vertical_button_height"
            android:gravity="center"
            android:layout_marginEnd="4sp"
            android:backgroundTint="@color/green"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:text="@string/dot" />

        <Button
            android:id="@+id/plus"
            android:onClick="operate"
            android:layout_width="@dimen/calc_vertical_button_width"
            android:layout_height="@dimen/calc_vertical_button_height"
            android:gravity="center"
            android:layout_marginStart="3sp"
            android:backgroundTint="@color/green"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/plus" />
    </TableRow>


    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ce"
            android:onClick="ce"
            android:layout_width="@dimen/calc_vertical_button_width"
            android:layout_height="@dimen/calc_vertical_button_height"
            android:gravity="center"
            android:layout_marginStart="3sp"
            android:backgroundTint="@color/green"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/ce" />

        <Button
            android:id="@+id/percent"
            android:onClick="percent"
            android:layout_width="@dimen/calc_vertical_button_width"
            android:layout_height="@dimen/calc_vertical_button_height"
            android:gravity="center"
            android:layout_marginStart="3sp"
            android:backgroundTint="@color/green"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/percent" />

        <Button
            android:id="@+id/equals"
            android:layout_width="@dimen/calc_vertical_equals_button_width"
            android:layout_height="@dimen/calc_vertical_button_height"
            android:layout_marginStart="4sp"
            android:backgroundTint="@color/green"
            android:onClick="equals"
            android:text="@string/equals"
            android:textColor="@color/black"
            android:textSize="24sp" />


    </LinearLayout>


</LinearLayout>