<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_act_main"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/headText"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/head_text"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/firstDigit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/first_name"
        android:inputType="number" />

    <EditText
        android:id="@+id/secondDigit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/second_name"
        android:inputType="number" />

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/result"
        android:inputType="number" />

    <Switch
        android:id="@+id/switchModul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/switch_text"
        android:textColor="@color/blue" />


    <CheckBox
        android:id="@+id/checkIntoFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/chBox_text"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/onOffText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:text="@string/on_off_text"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ToggleButton
        android:id="@+id/onOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textOff="Выкл"
        android:textOn="Вкл" />

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:drawableBottom="@drawable/start_button" />

    <TextView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="datetime"
        android:textColor="@color/black" />


</LinearLayout>